[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adrien_Mertens", email = ""},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
tools = [
    "black>=22.10.0",
]
